# toneguard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY.md  README.md  SKILL.md  STORE_DESCRIPTION.md  content.js  lib.js  manifest.json  options.html  options.js  overlay-frame.css  overlay-frame.js  overlay.html  overlay.js  package-lock.json  package.json  panel.css  panel.html  panel.js  popup.html  popup.js  service-worker.js  style-rules.md  vitest.config.js  welcome.html  welcome.js
android/: .gitignore  gradlew  settings.gradle.kts
docs/: analysis-contract.md  client-parity.md
prompts/: analysis-tool.json  android-sync-session.md  base.txt  landing-tool.json  landing.txt  voice-principles.txt
pwa/: app.js  generated-prompts.js  index.html  manifest.json  sw.js
scripts/: generate_shared_artifacts.mjs  parity_manifest.json  parity_scan.mjs
sync-server/: .env.example  README.md  package-lock.json  package.json  railway.toml  schema.sql
tests/: analysis-contract.test.js  lib-exports.mjs  lib.test.js  manifest-cws-ready.test.js  manifest.test.js  merge-exports.mjs  merge.test.js  parity-scan.test.js  pwa-install.test.js  shared-artifacts.test.js  stale-fallback.test.js  sync-client.test.js  syntax.test.js  telemetry.test.js
toneguard-mcp/: README.md  analyzer.py  learning_store.py  merge.py  pyproject.toml  server.py  sync.py
toneguard-mcp/critics/: claude-tone.md  gpt-tone.md  landing.md
toneguard-mcp/tests/: test_analysis_contract.py  test_analyzer.py  test_learning.py  test_live_integration.py  test_merge.py  test_server.py
(+87 files in other folders)
