[project]
name = "toneguard-mcp"
version = "0.1.0"
description = "ToneGuard MCP server — multi-agent tone analysis for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
